// See README.txt for information and build instructions.

package tutorial;

option java_package = "example.protobuf.tutorial";
option java_outer_classname = "AddressBookProtos2";

message Person2 {
  optional string name = 1;
  required int32 id = 2;        // Unique ID number for this person.
  optional string email = 3;

  enum PhoneType2 {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber2 {
    required string number = 1;
    optional PhoneType2 type = 2 [default = HOME];
  }

  repeated PhoneNumber2 phone = 4;
  
  optional string desc = 9 [default="demo desc"];
}

// Our address book file is just one of these.
message AddressBook2 {
  repeated Person2 person = 1;
}
